# naive-admin-rust

./: .env  .gitignore  Cargo.toml  README.md  dds.sh  docker-compose-mysql.yaml  init.sql
src/: db_test.rs  main.rs  main_sess.rs  main_svg.rs  main_test.rs
src/api/: comm_api.rs  hello_api.rs  login_api.rs  mod.rs  resp.rs  role_api.rs  user_api.rs
src/controllers/: hello.rs  login.rs  mod.rs  permission.rs  role.rs  user.rs
src/db/: mod.rs  permission_model.rs  profile_model.rs  role_model.rs  role_permissions_permission.rs  user_model.rs  user_roles_role_model.rs
src/middleware/: auth.rs
src/routers/: mod.rs
src/tools/: jwt.rs  mod.rs
tests/: http_test.rs  tools_test.rs
vue-naive-admin/: .env.development  package-lock.json
