[package]
name = "rust_api_v2"
version = "0.0.1"
edition = "2021"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main_test"
path = "src/main_test.rs"

[[bin]]
name = "main_sess"
path = "src/main_sess.rs"

[[bin]]
name = "db_test"
path = "src/db_test.rs"

[[bin]]
name = "main_svg"
path = "src/main_svg.rs"

[dependencies]
axum = "0.7.4"
time="0.3"
tokio = { version = "1.27", features = ["full"] }
hyper="0.14.25"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls","time", "chrono"] }
mysql="24"
md-5 = "0.8"
reqwest = "0.11"
jsonwebtoken = "9.2"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
serde_json = "1.0.114"
axum-extra = "0.9.2"
thiserror = "1.0.57"
svg = "0.16.0"
async-session = "3.0.0"
rand = "0.8.5"
bytes = "1.5.0"
axum_session = "0.12.4"
tracing = "0.1.25"
tracing-subscriber = "0.2.21"


[[test]]
name = "http_test"
path = "tests/http_test.rs"
